# neuron_sim

./: Cargo.toml  README.md  config.toml  main.sh
analysis/: .gitignore  README.md  main.py  pyproject.toml
src/: README.md  config.rs  field.rs  lif.rs  main.rs  old_code.rs  utils.rs  weights.rs
