[project]
name = "analysis"
version = "0.1.0"
description = "Analysis environment for the Rust Neural Simulator (RuNS)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.8",
    "pandas>=3.0.0",
    "pyqt5>=5.15.11",
    "seaborn>=0.13.2",
]
